@@ -193,6 +193,11 @@ before killing it.")
     (let ((menu (assoc (_ "Sessi_on") root-menu)))
       (when menu
 	(nconc menu `(()
+		      (,(_ "_Lockdown Display")
+			(poweroff 'lockdown))
+		      (,(_ "L_ogout from Session")
+			(poweroff 'logout))
+		      ()
 		      (,(_ "_Reboot System")
 		       (poweroff 'reboot))
 		      (,(_ "_Shutdown System")
